--- a/Landing_Page/src/index.html
+++ b/Landing_Page/src/index.html
@@ -17,13 +17,30 @@
             <i class="fa-solid fa-user" id="user-icon"></i>
         </h1>
         <ul id="user-menu" class="hidden">
-            <li><a href="#">Login</a></li>
+            <li><a onclick="openModal()">Login</a></li>
             <li><a href="#">Perfil</a></li>
             <li><a href="#">Configurações</a></li>
             <li><a href="#">Sair</a></li>
         </ul>
     </header>
     <main>
+
+        <div id="modal" class="modal">
+            <div id="register-form" class="modal-form">
+                <input type="text" id="nickname" name="nickname" placeholder="Username" required />
+                <input type="email" id="email" name="email" placeholder="E-mail" required />
+                <input type="password" id="password" name="password" placeholder="Password" required />
+                <button class="button" onclick="register()">Registrar</button>
+            </div>
+
+            <div id="login-form" class="modal-form">
+                <input type="email" id="loginEmail" name="loginEmail" placeholder="E-mail" required />
+                <input type="password" id="loginPassword" name="loginPassword" placeholder="Password" required />
+
+                <button class="button" onclick="performLogin()">Entrar</button>
+            </div>
+            <button class="close-modal" onclick="closeModal()">Fechar</button>
+        </div>
         <aside>
             <h2>Filtros</h2>
             <form id="filter-form">
