--- a/Landing_Page/src/jogos_page/jogos.html
+++ b/Landing_Page/src/jogos_page/jogos.html
@@ -5,50 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Comparador de Preços de Jogos</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="jogos.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
 </head>
 
 <body>
-    <header>
-        <div class="logo">
-            <img src="logo.png" alt="GamePrice Tracker Logo">
-        </div>
-        <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Jogos</a></li>
-                <li><a href="#">Sobre Nós</a></li>
-                <li><a href="#">Contato</a></li>
-            </ul>
-        </nav>
-        <h1>
-            GamePrice Tracker
-            <i class="fa-solid fa-user" id="user-icon"></i>
-        </h1>
+    <div id="header-container"></div>
 
-
-        <div class="user-options">
-            <!-- <i class="fa-solid fa-bell"></i> -->
-            <!-- <i class="fa-solid fa-heart"></i> -->
-            <div class="dropdown">
-                <!-- <i class="fa-solid fa-globe"></i> -->
-                <div class="dropdown-content">
-                    <a href="#">EN</a>
-                    <a href="#">PT</a>
-                    <a href="#">ES</a>
-                </div>
-            </div>
-            <!-- <i class="fa-solid fa-shopping-cart"></i> -->
-        </div>
-        <ul id="user-menu" class="hidden">
-            <li><a onclick="openModal()">Login</a></li>
-            <li><a href="#">Perfil</a></li>
-            <li><a href="#">Configurações</a></li>
-            <li><a href="#">Sair</a></li>
-        </ul>
-    </header>
     <main>
 
         <div id="modal" class="modal">
@@ -103,10 +67,30 @@
         </section>
     </main>
 
-    <footer>
-        <p>Desenvolvido por <a href="https://github.com/felipem-f">Felipe</a></p>
-    </footer>
-    <script src="app.js"></script>
+    <div id="footer-container"></div>
+
+    <script>
+        async function loadContent(url, elementId) {
+            const response = await fetch(url);
+            const content = await response.text();
+            document.getElementById(elementId).innerHTML = content;
+            return content;  // Return the content to chain promises if needed
+        }
+
+        Promise.all([
+            loadContent('../header/header.html', 'header-container'),
+            loadContent('../footer/footer.html', 'footer-container')
+        ]).then(() => {
+            document.getElementById('user-icon').addEventListener('click', () => {
+                const userMenu = document.getElementById('user-menu');
+                userMenu.classList.toggle('hidden');
+                userMenu.classList.toggle('show');
+            });
+        }).catch(error => {
+            console.error('Error loading content:', error);
+        });
+    </script>
+    <script src="jogos.js"></script>
 </body>
 
 </html>
