--- a/Landing_Page/src/header/header.html
+++ b/Landing_Page/src/header/header.html
@@ -11,7 +11,9 @@
     </nav>
 
     <div class="page-logo">
-        <img src="../images/imagens-geradas/logo.png" alt="Save on Your Game">
+        <a href="../index/index.html">
+            <img src="../images/imagens-geradas/logo.png" alt="Save on Your Game">
+        </a>
     </div>
     <h1 class="title">
         <a href="../jogos_page/jogos.html" class="title-text">
