--- a/Landing_Page/index.html
+++ b/Landing_Page/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Comparador de Preços de Jogos</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="src/index/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
 </head>
@@ -14,8 +14,8 @@
     <div id="header-container"></div>
     <main>
 
-        <div id="modal" class="modal">
-            <button type="button" class="button close-modal" onclick="closeModal()">X</button>
+        <div id="modal-login" class="modal">
+            <button type="button" class="button close-modal" onclick="closeModal('modal-login')">X</button>
             <div id="register-form" class="modal-form">
                 <input type="text" id="nickname" name="nickname" placeholder="Username" required />
                 <input type="email" id="email" name="email" placeholder="E-mail" required />
@@ -42,19 +42,19 @@
             <div class="cards">
                 <div class="card" id="steam">
                     <div class="card-content">
-                        <img class="logos" src="../images/logos/steam.png" alt="Steam">
+                        <img class="logos" src="src/images/logos/steam.png" alt="Steam">
                         <p>R$ 119,96</p>
                     </div>
                 </div>
                 <div class="card" id="epic">
                     <div class="card-content">
-                        <img class="logos" src="../images/logos/epic.png" alt="Epic">
+                        <img class="logos" src="src/images/logos/epic.png" alt="Epic">
                         <p>R$ 119,96</p>
                     </div>
                 </div>
                 <div class="card" id="nuuvem">
                     <div class="card-content">
-                        <img class="logos" src="../images/logos/nuuvem.png" alt="nuuvem">
+                        <img class="logos" src="src/images/logos/nuuvem.png" alt="nuuvem">
                         <p>R$ 299,90</p>
                     </div>
                 </div>
@@ -69,16 +69,16 @@
             <p>Descubra os melhores preços dos jogos que você mais adora. Busque seus jogos favoritos em um só lugar e compare os preços com as principais lojas do mercado. Descobra onde você pode encontrar os melhores descontos.</p>
         </div>
         <div class="info-image">
-            <img src="../images/imagens-geradas/info-img.png" alt="info">
+            <img src="src/images/imagens-geradas/info-img.png" alt="info">
         </div>
     </div>
     <div class="info info2">
         <div class="info-image info-image2">
-            <img src="../images/imagens-geradas/register-image.png" alt="info">
+            <img src="src/images/imagens-geradas/register-image.png" alt="info">
         </div>
         <div class="info-content">
             <p >Cadastre-separa aproveitar todas as vantagens do nosso site! Adicione seus jogos favoritos à sua lista pessoal, receba alertas de preços especiais e acesse ofertas exclusivas. Não perca nenhuma promoção e fique sempre atualizado com as melhores opções do mercado.</p>
-            <p class="cadastro" onclick="openModal()">Cadastre-se agora </p>
+            <p class="cadastro" onclick="openModal('modal-login')">Cadastre-se agora </p>
         </div>
     </div>
     </main>
@@ -89,12 +89,12 @@
             const response = await fetch(url);
             const content = await response.text();
             document.getElementById(elementId).innerHTML = content;
-            return content;  // Return the content to chain promises if needed
+            return content;
         }
 
         Promise.all([
-            loadContent('../header/header.html', 'header-container'),
-            loadContent('../footer/footer.html', 'footer-container')
+            loadContent('src/header/header.html', 'header-container'),
+            loadContent('src/footer/footer.html', 'footer-container')
         ]).then(() => {
             document.getElementById('user-icon').addEventListener('click', () => {
                 const userMenu = document.getElementById('user-menu');
@@ -105,7 +105,7 @@
             console.error('Error loading content:', error);
         });
     </script>
-    <script src="app.js"></script>
+    <script src="src/index/app.js"></script>
 </body>
 
 </html>
