--- a/Landing_Page/src/jogos_page/jogos.html
+++ b/Landing_Page/src/jogos_page/jogos.html
@@ -15,8 +15,8 @@
 
     <main>
 
-        <div id="modal" class="modal">
-            <button type="button" class="button close-modal" onclick="closeModal()">X</button>
+        <div id="modal-login" class="modal">
+            <button type="button" class="button close-modal" onclick="closeModal('modal-login')">X</button>
 
             <div id="register-form" class="modal-form">
                 <input type="text" id="nickname" name="nickname" placeholder="Username" required />
@@ -65,6 +65,10 @@
                 <!-- Paginação será inserida aqui via JavaScript -->
             </div>
         </section>
+
+        <div id="modal-message" class="modal">
+            <p id="message"></p>
+        </div>
     </main>
 
     <div id="footer-container"></div>
