--- a/Landing_Page/src/jogos_page/jogos.html
+++ b/Landing_Page/src/jogos_page/jogos.html
@@ -53,6 +53,7 @@
             </form>
         </aside>
         <section id="jogos">
+            <button type="button" class="button" onclick="openModal('modal-message')">Modal</button>
             <form id="search-form">
                 <label for="nome-jogo">Nome do Jogo:</label>
                 <input type="text" id="nome-jogo" name="nome-jogo">
