criação de sobre e contato

--- a/Landing_Page/src/header/header.html
+++ b/Landing_Page/src/header/header.html
@@ -5,8 +5,8 @@
         <ul>
             <li><a href="/index.html">Home</a></li>
             <li><a href="/src/jogos_page/jogos.html">Jogos</a></li>
-            <li><a href="#">Sobre Nós</a></li>
-            <li><a href="#">Contato</a></li>
+            <li><a href="/src/sobre/sobre.html">Sobre Nós</a></li>
+            <li><a href="/src/contato/contato.html">Contato</a></li>
         </ul>
     </nav>
 
@@ -32,3 +32,4 @@
         <li><a href="#">Sair</a></li>
     </ul>
 </header>
+<script src="/src/header/header.js"></script>
