--- a/Landing_Page/src/contato/contato.html
+++ b/Landing_Page/src/contato/contato.html
@@ -4,20 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Comparador de Preços de Jogos</title>
-    <link rel="stylesheet" href="jogos.css">
+    <title>Comparador de Preços de Jogos - Contato</title>
+    <link rel="stylesheet" href="contato.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-
 </head>
 
 <body>
     <div id="header-container"></div>
-
     <main>
 
         <div id="modal-login" class="modal">
             <button type="button" class="button close-modal" onclick="closeModal('modal-login')">X</button>
-
             <div id="register-form" class="modal-form">
                 <input type="text" id="nickname" name="nickname" placeholder="Username" required />
                 <input type="email" id="email" name="email" placeholder="E-mail" required />
@@ -28,50 +25,38 @@
             <div id="login-form" class="modal-form">
                 <input type="email" id="loginEmail" name="loginEmail" placeholder="E-mail" required />
                 <input type="password" id="loginPassword" name="loginPassword" placeholder="Password" required />
-
-                <button type="submit" class="button" onclick="performLogin()">Entrar</button>
+                <button type="button" class="button" onclick="performLogin()">Entrar</button>
             </div>
-
         </div>
-        <aside>
-            <h2>Filtros</h2>
-            <form id="filter-form">
-                <fieldset>
-                    <legend>Loja</legend>
-                    <label><input type="checkbox" name="store" value="Steam"> Steam</label><br>
-                    <label><input type="checkbox" name="store" value="Epic Games"> Epic Games</label><br>
-                    <label><input type="checkbox" name="store" value="GOG"> GOG</label><br>
-                    <label><input type="checkbox" name="store" value="Microsoft Store"> Microsoft Store</label>
-                </fieldset>
-                <fieldset>
-                    <legend>Preço</legend>
-                    <label><input type="radio" name="price" value="low"> Menor que R$ 50,00</label><br>
-                    <label><input type="radio" name="price" value="medium"> R$ 50,00 - R$ 100,00</label><br>
-                    <label><input type="radio" name="price" value="high"> Maior que R$ 100,00</label>
-                </fieldset>
-                <button type="submit">Aplicar Filtros</button>
-            </form>
-        </aside>
-        <section id="jogos">
 
-            <form id="search-form">
-                <label for="nome-jogo">Nome do Jogo:</label>
-                <input type="text" id="nome-jogo" name="nome-jogo">
-                <button type="submit">Buscar</button>
+        <section class="contact-form">
+            <h1>Contato</h1>
+            <form id="contactForm" onsubmit="enviarFormulario(event)">
+                <div class="form-group">
+                    <label for="name"><i class="fas fa-user"></i> Nome</label>
+                    <input type="text" id="name" name="name" required>
+                </div>
+                <div class="form-group">
+                    <label for="email-contato"><i class="fas fa-envelope"></i> Email</label>
+                    <input type="email" id="email-contato" name="email-contato" required>
+                </div>
+                <div class="form-group">
+                    <label for="subject"><i class="fas fa-tag"></i> Assunto</label>
+                    <input type="text" id="subject" name="subject" required>
+                </div>
+                <div class="form-group">
+                    <label for="message"><i class="fas fa-comment"></i> Mensagem</label>
+                    <textarea id="message" name="message" rows="5" required></textarea>
+                </div>
+                <button type="submit" class="contato-enviar"><i class="fas fa-paper-plane"></i> Enviar</button>
             </form>
-            <div id="resultado">
-                <!-- Jogos serão inseridos aqui via JavaScript -->
-            </div>
-            <div id="pagination">
-                <!-- Paginação será inserida aqui via JavaScript -->
-            </div>
         </section>
 
         <div id="modal-message" class="modal">
             <p id="message-text"></p>
         </div>
-    </main>
 
+    </main>
     <div id="footer-container"></div>
 
     <script>
@@ -79,7 +64,7 @@
             const response = await fetch(url);
             const content = await response.text();
             document.getElementById(elementId).innerHTML = content;
-            return content;  // Return the content to chain promises if needed
+            return content;
         }
 
         Promise.all([
@@ -95,8 +80,8 @@
             console.error('Error loading content:', error);
         });
     </script>
-    <script src="jogos.js"></script>
     <script src="/src/modal/modal.js"></script>
+    <script src="contato.js"></script>
 </body>
 
 </html>
