--- a/Landing_Page/src/footer/footer.html
+++ b/Landing_Page/src/footer/footer.html
@@ -1,3 +1,9 @@
+<link rel="stylesheet" href="/src/footer/footer.css" />
 <footer>
-    <p>Desenvolvido por <a href="https://github.com/felipem-f">Felipe</a></p>
+    <p>
+        Desenvolvido por
+        <a href="https://github.com/felipem-f" target="_blank" rel="noopener noreferrer">
+            Felipe
+        </a>
+    </p>
 </footer>
