--- a/Landing_Page/src/header/header.html
+++ b/Landing_Page/src/header/header.html
@@ -27,9 +27,9 @@
 
     <ul id="user-menu" class="hidden">
         <li><a onclick="openModal('modal-login')">Login</a></li>
-        <li><a href="#">Perfil</a></li>
-        <li><a href="#">Configurações</a></li>
-        <li><a href="#">Sair</a></li>
+        <li><a >Perfil</a></li>
+        <li><a >Configurações</a></li>
+        <li><a >Sair</a></li>
     </ul>
 </header>
 
