inserção dos favoritos no localhost

--- a/Landing_Page/src/footer/footer.html
+++ b/Landing_Page/src/footer/footer.html
@@ -1,5 +1,3 @@
-<link rel="stylesheet" href="/src/footer/footer.css" />
-
 <footer class="footer">
     <div class="footer-content">
         <div class="footer-about">
@@ -9,7 +7,7 @@
                     F. Fracasso
                 </a>
             </p>
-            <p>Desenvolvedor web apaixonado por criar soluções inovadoras e eficientes. Vamos nos conectar!</p>
+            <p>Vamos nos conectar!</p>
         </div>
         <div class="footer-nav">
             <ul>
