--- a/Landing_Page/src/jogos/jogos.html
+++ b/Landing_Page/src/jogos/jogos.html
@@ -1,22 +1,18 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Save On Your Game</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="/src/index/style.css">
     <link rel="stylesheet" href="jogos.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-
 </head>
-
 <body>
     <div id="header-container"></div>
-
     <main>
-
         <div id="modal-container"></div>
-
         <aside>
             <h2>Filtros</h2>
             <form id="filter-form">
@@ -33,16 +29,14 @@
                     <label><input type="radio" name="price" value="medium"> R$ 50,00 - R$ 100,00</label><br>
                     <label><input type="radio" name="price" value="high"> Maior que R$ 100,00</label>
                 </fieldset>
+                <fieldset>
+                    <legend>Favoritos</legend>
+                    <label><input type="checkbox" name="favorites" value="favorites"> Mostrar apenas favoritos</label>
+                </fieldset>
                 <button type="submit">Aplicar Filtros</button>
             </form>
         </aside>
         <section id="jogos">
-
-            <form id="search-form">
-                <label for="nome-jogo" class="busca">Buscar Jogo:</label>
-                <input type="text" id="nome-jogo" name="nome-jogo">
-                <button type="submit">Buscar</button>
-            </form>
             <div id="resultado">
                 <!-- Jogos serão inseridos aqui via JavaScript -->
             </div>
@@ -50,15 +44,14 @@
                 <!-- Paginação será inserida aqui via JavaScript -->
             </div>
         </section>
-
-
     </main>
-
     <div id="footer-container"></div>
-
     <script src="/src/config/header-footer-import.js"></script>
     <script src="/src/modal/modal.js"></script>
-    <script src="jogos.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script type="module" src="jogos.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
 </body>
-
 </html>
