--- a/Landing_Page/src/header/header.html
+++ b/Landing_Page/src/header/header.html
@@ -24,14 +24,14 @@
                         <a id="nav-contato" class="nav-link" href="/src/contato/contato.html">Contato</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link fa-solid fa-user" id="user-icon" href="#" role="button"
+                        <a class="nav-link fa-solid fa-user" id="user-icon" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="#" onclick="openModal('modal-login')">Login</a></li>
-                            <li><a class="dropdown-item" href="#">Perfil </a></li>
+                            <li><a class="dropdown-item" href="#" onclick=excluirUsuário()>Excluir conta</a></li>
                             <li><a class="dropdown-item" href="#">Configurações</a></li>
-                            <li><a class="dropdown-item" href="#">Sair</a></li>
+                            <li><a class="dropdown-item" href="#"onclick="sair()">Sair</a></li>
                         </ul>
                     </li>
                 </ul>
