--- a/Landing_Page/src/jogos/jogos.html
+++ b/Landing_Page/src/jogos/jogos.html
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Save On Your Game</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="/src/index/style.css">
-    <link rel="stylesheet" href="jogos.css">
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="/style.css">
+    <script type="module" src="/src/config/navigation.js"></script>
 </head>
+
 <body>
     <div id="header-container"></div>
-    <main>
-        <div id="modal-container"></div>
+
+    <div id="modal-container"></div>
+
+    <main id="main-content">
         <aside>
             <h2>Filtros</h2>
             <form id="filter-form">
@@ -25,9 +30,9 @@
                 </fieldset>
                 <fieldset>
                     <legend>Preço</legend>
-                    <label><input type="radio" name="price" value="low"> Menor que R$ 50,00</label><br>
-                    <label><input type="radio" name="price" value="medium"> R$ 50,00 - R$ 100,00</label><br>
-                    <label><input type="radio" name="price" value="high"> Maior que R$ 100,00</label>
+                    <label><input type="checkbox" name="price" value="low"> Menor que R$ 50,00</label><br>
+                    <label><input type="checkbox" name="price" value="medium"> R$ 50,00 - R$ 100,00</label><br>
+                    <label><input type="checkbox" name="price" value="high"> Maior que R$ 100,00</label>
                 </fieldset>
                 <fieldset>
                     <legend>Favoritos</legend>
@@ -44,14 +49,17 @@
                 <!-- Paginação será inserida aqui via JavaScript -->
             </div>
         </section>
+
     </main>
+
     <div id="footer-container"></div>
-    <script src="/src/config/header-footer-import.js"></script>
+
+    <script type="module" src="/src/config/navigation.js"></script>
     <script src="/src/modal/modal.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script type="module" src="jogos.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous"></script>
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </body>
+
 </html>
